--- a/scanner/css/beep.css
+++ b/scanner/css/beep.css
@@ -1,6 +1,13 @@
 #maindiv {
-  display: flex;
+  display: block;
+  float: none;
+  position: static;
   justify-content: center;
+  justify-self: center;
+  min-width: 360px;
+  max-width: 500px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .eebody {
@@ -12,10 +19,7 @@
   margin: 15px;
 }
 
-#barcode_scanner {
-  min-width: 360px;
-  max-width: 500px;
-}
+#barcode_scanner {}
 
 .hidden {
   display: none;
@@ -113,6 +117,8 @@ button {
 }
 
 .loader {
+  margin-left: auto;
+  margin-right: auto;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid black;
