Replace second scan with Admit / Abort buttons

--- a/scanner/css/beep.css
+++ b/scanner/css/beep.css
@@ -110,8 +110,7 @@ button {
   font-size: 18px;
 }
 
-#manualbutton {
-  background-color: whitesmoke;
+#manualButton {
   border: 3px solid grey;
 }
 
